Update build.gradle
See https://stackoverflow.com/a/52684388